added shaders directory to resources.qrc

--- a/shaders.qrc
+++ b/shaders.qrc
@@ -1,1 +1,6 @@
-<RCC/>
+<RCC>
+    <qresource prefix="/">
+        <file>shaders/shader.frag</file>
+        <file>shaders/shader.vert</file>
+    </qresource>
+</RCC>
