added textures resources

--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>shaders/shader.frag</file>
         <file>shaders/shader.vert</file>
+        <file>textures/stripes.xcf</file>
     </qresource>
 </RCC>
