--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,6 @@
         <file>shaders/shader.frag</file>
         <file>shaders/shader.vert</file>
         <file>textures/stripes.xcf</file>
+        <file>textures/squares.xcf</file>
     </qresource>
 </RCC>
