removed SOIL and added one more texture

--- a/resources.qrc
+++ b/resources.qrc
@@ -4,5 +4,6 @@
         <file>shaders/shader.vert</file>
         <file>textures/stripes.xcf</file>
         <file>textures/squares.xcf</file>
+        <file>textures/stripes.png</file>
     </qresource>
 </RCC>
